syntax = "proto3";

service Compiler {
  rpc runCode (CodeRequest) returns (CodeResponse);
  rpc submitCode (TestRequest) returns (TestResponse);
}


message CodeRequest {
  string code = 1;  
  string input = 2; 
}


message CodeResponse {
  string output = 1; 
  string error = 2;   
}


message TestRequest {
  string code = 1;          
  repeated string testCases = 2;  
}


message TestResponse {
  repeated bool results = 1;  
}
